# realworld-axum-sqlx

./: .env.docker  .env.example  Cargo.toml  Makefile.toml
.sqlx/: query-079332766b130519613cd31c62703c8f202ecba41563ead6f6ed96653ae10ba1.json  query-2cf1f6d9811d9213a0e640e1d97197d262c0024c27df6f5730aa02f7f6f01640.json  query-69de98d30dd7e139c61582c2fbde0bbad6fb93b83218b17caffd4257ea913f35.json  query-7140e0ecfa0646dd1880495e05ae6c2cac2ed09f6079e4051dba59388e0b235b.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-789904af7e932006aa0886215a6f6fd6379ec7f1be9a9ec7c1df08faf738b9ce.json  query-9d00617966f8aeebb08de6ad981dc3b8697c65f0b23cea4684f525732d8f6706.json  query-c74c06990e36e0a98c368037c11606eb3f5d1ab370d26ef9d73fff63bf6263d0.json  query-d2b440837e0517d605c012d25ad7790c5c715352bee3574380760c411ae1b78a.json  query-ef0e91839cb18898eb4eab53b80edcb5806bd91588c45c04014e28328b4ed5fd.json  query-f5a1a6f065ae04fbf852fb3988badd897e0a541476f7da24fcc48605332115d8.json
config/: config.yaml
configuration/: config.yaml
deploy/: docker-compose.postgres.yaml
migrations/: 20240927203548_create_users.up.sql  20250126203236_create_user_follows.down.sql  20250126203236_create_user_follows.up.sql  20250209125109_add_tags.up.sql
scripts/: copy-env.sh
src/: main.rs
src/app/: constants.rs  error.rs  mod.rs  token.rs
src/app/api/: config.rs  mod.rs  openapi.rs  response.rs  server.rs
src/app/api/extractors/: mod.rs  optional_authentication.rs  required_authentication.rs  validation_extractor.rs
src/app/api/profile/: endpoints.rs  mod.rs  responses.rs  router.rs
src/app/api/tags/: endpoints.rs  responses.rs  router.rs
src/app/api/user/: endpoints.rs  mod.rs  requests.rs  responses.rs  router.rs
src/app/core/: error.rs
src/app/core/user/: entity.rs  repository.rs
src/app/data/: db.rs  mod.rs
src/app/data/user/: repository.rs  usecase.rs
src/app/domain/: error.rs  mod.rs
src/app/domain/articles/repository/: entities.rs  mod.rs  requests.rs  responses.rs
src/app/domain/articles/usecase/: mod.rs  requests.rs  responses.rs
src/app/domain/jwt_token/: jwt_token.rs  mod.rs
src/app/domain/profile/repository/: entities.rs  mod.rs  responses.rs
src/app/domain/profile/usecase/: mod.rs  responses.rs
src/app/domain/tags/repository/: entities.rs  mod.rs  responses.rs
src/app/domain/tags/usecase/: mod.rs
src/app/domain/user/: entity.rs  repository.rs  usecase.rs
src/app/domain/user/repository/: entities.rs  mod.rs  repository.rs  requests.rs  responses.rs
src/app/domain/user/usecase/: mod.rs  requests.rs  responses.rs  usecase.rs
src/app/infrastructure/: db.rs  di.rs  mod.rs
src/app/infrastructure/articles/: repository.rs
src/app/infrastructure/jwt_token/: claims.rs  jwt_token.rs  mod.rs  settings.rs
src/app/infrastructure/pgsql/: db.rs  mod.rs  settings.rs  transaction.rs
src/app/infrastructure/profile/: repository.rs  usecase.rs
src/app/infrastructure/queries/users/: insert.sql  update.sql
src/app/infrastructure/repository/: users_repository.rs
src/app/infrastructure/tags/: repository.rs  usecase.rs
src/app/infrastructure/user/: mod.rs  repository.rs  token.rs  usecase.rs
src/app/infrastructure/utils/: hasher.rs
src/tests/: config.yaml
src/tests/helpers/: configure_database.rs  mod.rs
src/tests/unit/app/infrastructure/user/: repository_test.rs
